# FruitsCounter

./: .gitignore  CMakeLists.txt  ColorReducter.cpp  ColorReducter.hpp  HogUtil.hpp  MJpegStream.cpp  MJpegStream.hpp  README.md  TimeLapse.cpp  TimeLapse.hpp  TomatoCounter.cpp  TomatoCounter.hpp  TomatoInformation.cpp  TomatoInformation.hpp  counter.cpp  detect.cpp  doxyconf.conf  main.cpp  panorama.cpp  selective_search.cpp  train.cpp
data/: tomato_test.xml  tomato_test.yaml
doc/html/: _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  _time_lapse_8cpp.html  _time_lapse_8cpp_source.html  _time_lapse_8hpp.html  _time_lapse_8hpp_source.html  annotated.html  class_time_lapse-members.html  class_time_lapse.html  classes.html  files.html  formula.repository  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  index.html  main_8cpp.html  main_8cpp_source.html  md__r_e_a_d_m_e.html  pages.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_8.js  all_9.js  all_a.js  classes_0.js  files_2.js  functions_0.js  functions_3.js  functions_5.js  functions_6.js  functions_8.js  functions_9.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js
