cmake_minimum_required(VERSION 3.3)
project(FruitsCounter)

set(OpenCV_DIR "Where" CACHE PATH "Location of opencv_install_dir")
set(BOOST_ROOT "Where" CACHE PATH "Location of boost install dir")
set(BOOST_LIBRARYDIR "Where" CACHE PATH "Location of boost lib dir")
set(DLIB_ROOT "where" CACHE PATH "Location of dlib root dir")
set(Boost_USE_STATIC_LIBS ON)

find_package(OpenCV REQUIRED)
if(OpenCV_FOUND)
    message(STATUS "OpenCV_INCLUDE_DIRS:${OpenCV_INCLUDE_DIRS}")
    message(STATUS "OpenCV_LIB_DIR:${OpenCV_LIB_DIR}")
    message(STATUS "OpenCV_LIBS:${OpenCV_LIBS}")
    include_directories(${OpenCV_INCLUDE_DIRS})
    link_directories(${OpenCV_LIB_DIR})
endif()

find_package(Boost REQUIRED COMPONENTS filesystem system date_time regex thread chrono program_options)
if(Boost_FOUND)
    message(STATUS "Boost_INCLUDE_DIRS:${Boost_INCLUDE_DIRS}")
    message(STATUS "Boost_LIBRARY_DIRS:${Boost_LIBRARY_DIRS}")
    message(STATUS "Boost_LIBRARIES:${Boost_LIBRARIES}")
    include_directories(${Boost_INCLUDE_DIRS})
    link_directories(${Boost_LIBRARY_DIRS})
endif()

# main interface...?
set(MAIN_SOURCES main.cpp TimeLapse.cpp)
set(MAIN_HEADERS main.cpp TimeLapse.hpp)
add_executable(main ${MAIN_SOURCES} ${MAIN_HEADERS})
target_link_libraries(main ${OpenCV_LIBS})
target_link_libraries(main ${Boost_LIBRARIES})
